force-app/main/default/objects/Quickbook__c/Quickbook__c.object-meta.xml
<CustomObject>
    <label>Quickbook</label>
    <nameField>
        <label>Quickbook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quickbooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>