force-app/main/default/objects/Quickbook__c/fields/Client_id__c.field-meta.xml
<CustomField>
    <fullName>Client_id__c</fullName>
    <label>Client_id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>