force-app/main/default/objects/Quickbook__c/fields/realmId__c.field-meta.xml
<CustomField>
    <fullName>realmId__c</fullName>
    <label>realmId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>