force-app/main/default/objects/Quickbook__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>